# openglgpp

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
basic/: indexedDraws.cpp  interpolation.cpp  projection.cpp  rotate.cpp  translate.cpp
include/: camera.hpp  constants.hpp  directionalLight.hpp  input.hpp  light.hpp  material.hpp  mesh.hpp  model.hpp  movable.hpp  omniShadowMap.hpp  pointLight.hpp  shader.hpp  shadowMap.hpp  skybox.hpp  spotLight.hpp  texture.h  texture.hpp  transform.hpp  windowManager.hpp
resources/: directionalShadowMap.frag  directionalShadowMap.vert  omniShadowMap.frag  omniShadowMap.geom  omniShadowMap.vert  shader.frag  shader.vert  skybox.frag  skybox.vert
resources/stardestroyer/: Test.mtl
src/: camera.cpp  directionalLight.cpp  input.cpp  light.cpp  main.cpp  material.cpp  mesh.cpp  model.cpp  omniShadowMap.cpp  pointLight.cpp  scale.cpp  shader.cpp  shadowMap.cpp  skeleton.cpp  skybox.cpp  spotLight.cpp  texture.cpp  transform.cpp  triangle.cpp  uniformVariable.cpp  windowManager.cpp
src/programs/: ambient.cpp  diffuseLight.cpp  modelImporting.cpp  movement.cpp  omniMaps.cpp  pointLights.cpp  projection.cpp  shadowMaps.cpp  skyboxes.cpp  specularLight.cpp  spotLights.cpp  textures.cpp
